# web_app

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Procfile  README.md  app.yaml  main.py  pyproject.toml  requirements.txt  run.py  setup.py
api/: __init__.py  maze.txt  route.py  views.py  web_chat.py  web_game.py
api/models/: ReversiGame.py  authentication.py  mcts.py  network.py  play_reversi.py  reversi_env.py  train_maze.py  upload_maze.py
api/models/db/: bigquery_test.py
api/static/: aaa.sqlite3  network.js  style.css
api/static/js/: template.js  test.js
api/templates/: network.html
api/templates/app/: app.html  blog.html  common_meta_info.html  computer.html  footer.html  head_menu.html  header.html  index.html  layout.html  math.html  side_menu.html  test.html
api/views/: maze.py  network.py  reversi.py
data/model/: rollout_model.pth  sl_model.pth  value_model.pth
