[tool.poetry]
name = "web_api"
version = "0.1.0"
description = ""
authors = ["Yuki Wada <yuki.w.228285@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
numpy = "^1.19.5"
pandas = "^1.2.0"
gevent = "^20.12.1"
gevent-websocket = "^0.10.1"
matplotlib = "^3.3.3"
gunicorn = [
    { version = "^20.0.4", platform = 'linux' }
]
Flask-uWSGI-WebSocket = "^0.6.1"
Flask-Sockets = "^0.2.1"
Flask-SocketIO = "^5.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
