[tool.poetry]
name = "web_app_backend"
version = "0.1.0"
description = ""
authors = ["Yuki Wada <yuki.w.228285@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.8"
Flask = "1.1.2"
Flask-Cors = "^3.0.10"
gevent = "^21.8.0"
gevent-websocket = "^0.10.1"
matplotlib = "^3.5.0"
gunicorn = "^20.1.0"
Flask-uWSGI-WebSocket = "^0.6.1"
Flask-Sockets = "^0.2.1"
Flask-SocketIO = "^5.1.1"
gym = "^0.21.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
Werkzeug = "1.0.1"
google-cloud-bigquery = "^2.30.1"
pytorch-lightning = "^1.5.3"


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
